[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = "CLI застосунок 'Персональний помічник'"
authors = ["Твоє ім'я <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
prettytable = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
